frontend/css/style.scss
/* ... */
.rio-dropdown-option-highlighted::after {
    opacity: 0.2;
}

// Progress Circle
.rio-progress-circle {
    pointer-events: auto;
    stroke: var(--rio-local-plain-bg);

    // Since the svg inside is rotating, the corners of its bounding box will
    // stick out. This can cause frequent re-layouting. To prevent this, we
    // hide the overflow.
    overflow: hidden;
}

.rio-progress-circle circle {
    fill: none;
    stroke-width: 3.5;
    color: var(--rio-local-accent-bg);
}

.spinning svg {
    transform-origin: center;
    animation: rotate 2s linear infinite;
}

.spinning .progress {
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0;
    stroke-linecap: round;
    animation: dash 1.5s ease-in-out infinite;
}

.rio-progress-circle:not(.spinning) .progress {
    stroke-dashoffset: -94.25;
    stroke-dasharray: var(--dasharray);
    transition: stroke-dasharray 0.5s ease;
}

@keyframes rotate {
    100% {
        transform: rotate(360deg);
    }
}

@keyframes dash {
    0% {
        stroke-dasharray: 1, 200;
        stroke-dashoffset: 0;
    }

    50% {
        stroke-dasharray: 90, 200;
        stroke-dashoffset: -35px;
    }

    100% {
        stroke-dashoffset: -125px;
    }
}

// Button
.rio-button {
    // Preserve the text color outside of the switcheroo application, as some
    // styles depend on it.
    --outer-text-color: var(--rio-local-text-color);
}

.rio-button > * {
    width: 100%;
    height: 100%;

    pointer-events: auto;

    overflow: hidden; // Needed for the ripple effect

    transition:
        background-color 0.1s ease-in-out,
        color 0.1s ease-in-out,
        border-color 0.1s ease-in-out;
}

.rio-button:not(.rio-switcheroo-disabled) > * {
    @include ripple.surface;
    @include ripple.radius-bounded;
    @include ripple.states;
}

.rio-buttonstyle-major {
    background: var(--rio-local-plain-bg);
    --rio-local-text-font-weight: bold;

    box-shadow: 0 0 0 transparent;
    transition: box-shadow 0.2s ease-in-out;
}

.rio-buttonstyle-major:hover:not(.rio-switcheroo-disabled) {
    background: var(--rio-local-plain-bg);
    cursor: pointer;

    box-shadow: 0 0.1rem 0.22rem rgba(0, 0, 0, 0.35);
}

.rio-buttonstyle-minor:not(:hover) {
    outline: 0.1em solid var(--rio-local-plain-bg);
    --rio-local-text-color: var(--rio-local-plain-bg);
}

.rio-buttonstyle-minor:hover:not(.rio-switcheroo-disabled) {
    background: var(--rio-local-plain-bg);
    cursor: pointer;
}

.rio-buttonstyle-plain {
    --rio-local-text-color: var(--outer-text-color);
}

.rio-buttonstyle-plain:hover:not(.rio-switcheroo-disabled) {
    cursor: pointer;
    --rio-local-text-color: var(--rio-local-plain-bg);
}

// Shapes
.rio-shape-pill {
    border-radius: $infinite-corner-radius;
}

.rio-shape-rounded {
    border-radius: var(--rio-global-corner-radius-small);
}

.rio-shape-rectangle {
    border-radius: 0; // Not necessary, just for consistency
}

.rio-shape-circle {
    border-radius: 50%;
}

// Revealer
.rio-revealer {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: stretch;
}

.rio-revealer-header {
    pointer-events: auto;
    cursor: pointer;

    display: flex;
    align-items: center;
    justify-content: space-between;

    color: var(--rio-local-text-color);
}

.rio-revealer-label {
    flex-grow: 1;
}

.rio-revealer-arrow {
    opacity: 0.5;

    transform: rotate(90deg);

    transition: transform 0.25s ease-in-out;
}

.rio-revealer-open .rio-revealer-arrow {
    transform: rotate(0deg);
}

.rio-revealer-content-outer {
    flex-grow: 1;
    position: relative; // Needed for the overflow: hidden, not layouting
    overflow: hidden;
}

.rio-revealer-content-inner {
    position: absolute;
    bottom: 0;

    opacity: 0;
    transform: translateY(-50%);

    transition:
        opacity 0.45s ease-in-out,
        transform 0.35s ease;
}

.rio-revealer-open .rio-revealer-content-inner {
    opacity: 1;
    transform: translateY(0%);
}

.rio-revealer-content-inner > * {
    position: relative !important;
}

// Icon
.rio-icon {
    pointer-events: auto;
    @include center-content;
}

// Slideshow
.rio-slideshow {
    pointer-events: auto;
    overflow: hidden;
}

.slideshow-child-container {
    position: relative;
    display: grid;
    width: 100%;
    height: 100%;
}

.slideshow-child-container > div {
    grid-column-start: 1;
    grid-row-start: 1;
    width: 100%;
    height: 100%;
}

.slideshow-child-container > div > * {
    grid-column-start: 1;
    grid-row-start: 1;
    width: 100%;
    height: 100%;
}

.slideshow-progress {
    position: absolute;
    bottom: 0;

    width: 100%;
    height: 0.3rem;
    background-color: var(--rio-local-accent-bg);
}

// Overlay
.rio-overlay {
    pointer-events: none;
    position: fixed !important;

    top: 0 !important;
    left: 0 !important;
    width: unset !important;
    height: unset !important;

    z-index: $z-index-overlay;
}

// Spacer
.rio-spacer {
    pointer-events: none;
}

// MediaPlayer
.rio-media-player {
    pointer-events: auto;
}

.rio-media-player video {
    pointer-events: none;
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.rio-media-player-alt-display {
    pointer-events: none;

    position: absolute;
    left: 50%;
    top: 50%;

    width: 50%;
    height: 50%;
    max-width: 20rem;
    max-height: 20rem;
    aspect-ratio: 1;

    opacity: 0.5;

    transform: translate(-50%, -50%);
}

.rio-media-player-controls {
    position: absolute;
    left: 0;
    bottom: 0;
    right: 0;

    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6));
    padding-top: 2.5rem;

    display: flex;
    flex-direction: column;
    gap: 0rem;
    align-items: stretch;

    transition: opacity 0.4s ease-in-out;
}

.rio-media-player-timeline {
    pointer-events: auto;
    cursor: pointer;

    position: relative;
    height: 2rem;
    margin: 0 0.5rem;
}
/* ... */

